gccida/c1/add_equal_note
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_equal_note/src/optabs.c:595:43: error: must use 'enum' tag to refer to type 'rtx_code'
int  add_equal_note( rtx seq, rtx target, rtx_code code, rtx op0, rtx op1) 
                                          ^
                                          enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_equal_note/src/optabs.c:608:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_equal_note/src/optabs.c:651:29: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
|| ( v17.rtwint = ( __int64)v11->fld[0], *( _WORD *)v17.rtwint == 64) 
                            ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_equal_note/src/optabs.c:660:24: error: use of undeclared identifier 'invalid_operation'
v16 = ( v15 - 1 < 0) ^ __OFADD__( -1LL, v15) | ( v15 == 1); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_equal_note/src/optabs.c:403:25: note: expanded from macro '__OFADD__'
#define __OFADD__(x, y) invalid_operation // Generate overflow flag for (x+y)
                        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_equal_note/src/obj/optabs.o] Error 1
